--- a/js/package.json
+++ b/js/package.json
@@ -5,12 +5,16 @@
   "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node start.js"
+    "dev": "node start.js",
+    "migrate": "node-pg-migrate"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "ngrok": "^4.3.3"
+    "fastify": "^4.13.0",
+    "ngrok": "^4.3.3",
+    "node-pg-migrate": "^6.2.2",
+    "pg": "^8.9.0"
   }
 }
